# ChatKNML

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dict.md  Dictionary.md  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  import_docs.py  llm.py  main.py  pre-commit.md  pyproject.toml  test.md  test1.sh
.github/: auto-assign-config.yml
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: auto-assign.yml  chatlib.yml  discord.yml  discord_bot.yml  markdown_format.yml  shellcheck.yml  styling_check.yml
LLM/: Dockerfile  pyproject.toml  test_conetion.py
api/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
api/MyModels/: api.py  apps.py
api/MyModels/chunks/: views.py
api/MyModels/documents/: views.py
api/MyModels/migrations/: 0001_initial.py
api/api/: __init__.py  api.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
api/bot/: controllers.py  models.py  schemas.py  tests.py  views.py
api/chunks/: admin.py  apps.py  controllers.py  models.py  schemas.py  tests.py  utils.py  views.py
api/chunks/migrations/: 0001_initial.py  0002_alter_chunk_text.py
api/documents/: admin.py  api.py  controllers.py  models.py  schemas.py  services.py  tests.py  urls.py  views.py
api/documents/migrations/: 0001_initial.py  0002_remove_document_embedding.py
api/drfboilerplate/: urls.py  wsgi.py
api/drfboilerplate/settings/: ci-tests.py  dev.py  local.py  prod.py
chatlib/: .envrc.example  .gitignore  README.md  pyproject.toml
chatlib/chatlib/: __init__.py  index.py
chatlib/chatlib/wikijs/: __init__.py  chains.py  loaders.py  models.py
chatlib/tests/: fixtures.py  test_loaders.py
discord/: .gitignore  Bot.py  Dockerfile  README.md  bot.py  config.py  llm.py  pyproject.toml
discord/chatbot/: __init__.py  bot.py  config.py  llm.py
discord/prompts/: sheep-duck-llama2-70B.txt
discord/tests/: test_llm.py
discord_bot/: Dockerfile  README.md  pyproject.toml
discord_bot/discord_bot/: __init__.py  bot.py  config.py
discord_bot/tests/: test_example.py  test_llm.py
embedding/: README.md
embedingModels/: README.md  pyproject.toml
embeding_models/: api_embeding.py
llm/: .gitignore  Dockerfile  pyproject.toml
llm/test/: test_llm.py  test_promt.py
loaders/: README.md  clean_web_loader.py  local_data_loader.py  pyproject.toml  upload.py
loaders/tests/: test_clean_web_loader.py  test_local_data_loader.py
loaders/web_loader/: clean_web_loader.py
notebooks/: README.md
notebooks/data_gathering/WEB/: WebExtractor.ipynb
notebooks/tutorials/: Newspaper - quick overview & comparison.ipynb  RecursiveUrlLoader - quick overview.ipynb
postgres/: postgres.Dockerfile
testing/: .gitattributes  .gitignore  5_cat_qa.json  Dockerfile  erd.vuerd.json  llm_test_server.py  testDB.ipynb  testing.ipynb
testing/PRz_data/: statut
testing/logs/duzy_20231122-233200/: events.out.tfevents.1700692320.pop-os.15202.0.v2
testing/logs/duzy_20231122-233219/: events.out.tfevents.1700692339.pop-os.15202.1.v2  events.out.tfevents.1700692339.pop-os.15202.2.v2  events.out.tfevents.1700692339.pop-os.15202.3.v2  events.out.tfevents.1700692339.pop-os.15202.4.v2  events.out.tfevents.1700692339.pop-os.15202.5.v2
testing/logs/duzy_20231122-233915/: events.out.tfevents.1700692755.pop-os.15202.10.v2  events.out.tfevents.1700692755.pop-os.15202.6.v2  events.out.tfevents.1700692755.pop-os.15202.7.v2  events.out.tfevents.1700692755.pop-os.15202.8.v2  events.out.tfevents.1700692755.pop-os.15202.9.v2
testing/runs/Nov15_00-34-31_Kleczyk/: events.out.tfevents.1700004871.Kleczyk.18020.4
wikijs-extractor/: pyproject.toml  sc.py
wikijs-extractor/tests/: test_loaders.py
wikijs-extractor/wikijs_extractor/: chains.py  chat.py  loaders.py  models.py  questions.py  wikijs.py
