[tool.poetry]
name = "chatknml"
version = "0.1.0"
description = "Chatbot"
authors = ["Piotr Krawiec <piotr.krawiec23@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.0.312"
openai = "^0.28.1"
chromadb = "^0.4.13"
langchainhub = "^0.1.13"
beautifulsoup4 = "^4.12.2"
tiktoken = "^0.5.1"
fake-useragent = "^1.3.0"
pypdf = "^3.16.2"
streamlit = "^1.27.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
