[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Kleczyk <mailnasyff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.8.0"
langchain = "^0.1.1"
llama-cpp-python = {extras = ["server"], version = "^0.2.29"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
