[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Mikołaj Data <miki3867@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
uvicorn = "^0.24.0.post1"
channels = "^4.0.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
