[tool.poetry]
name = "chatlib"
version = "0.1.0"
description = ""
authors = ["Piotr Krawiec <piotr.krawiec23@gmail.com>"]
readme = "README.md"
packages = [{include = "chatlib"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
aiohttp = {extras = ["speedups"], version = "^3.9.0"}
pydantic = "^2.5.1"
langchain = "^0.0.327"

[tool.poetry.scripts]
wikijs-save-documents = "chatlib.wikijs.loaders:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.5"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test (deselect with '-m \"not integration\"')",
]
