[tool.poetry]
name = "chatlib"
version = "0.1.0"
description = ""
authors = ["Piotr Krawiec <piotr.krawiec23@gmail.com>"]
readme = "README.md"
packages = [{include = "chatlib"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
aiohttp = {extras = ["speedups"], version = "^3.9.0"}
pydantic = "^2.5.1"
langchain = "^0.0.327"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.5"
pytest-asyncio = "^0.21.1"
pyright = "^1.1.336"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test (deselect with '-m \"not integration\"')",
]

[tool.pyright]
include = ["chatlib"]
exclude = [
    "**/__pycache__",
]
useLibraryCodeForTypes = true
typeCheckingMode = "basic"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.ruff.lint]
select = ["D"]

ignore = [
    "D100",# Missing docstring in public module
    "D415" # First line should end with a period, question mark, or exclamation point
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88
