[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Kleczyk <mailnasyff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.8.0"
langchain = "^0.1.11"
llama-cpp-python = "^0.2.72"
uvicorn = "^0.26.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "llm",
]
