[tool.poetry]
name = "loaders"
version = "0.1.0"
description = ""
authors = ["Dawid Bis <dawidbis.98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.9"
newspaper3k = "^0.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
