[tool.poetry]
name = "wikijs-extractor"
version = "0.1.0"
description = ""
authors = ["Piotr Krawiec <piotr.krawiec23@gmail.com>"]
readme = "README.md"
packages = [{include = "wikijs_extractor"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
aiohttp = {extras = ["speedups"], version = "^3.8.6"}
pydantic = "^2.4.2"

[tool.poetry.scripts]
wikijs-extractor = "wikijs_extractor.wikijs:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
